--- a/public/panel.html
+++ b/public/panel.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>AssetSieve Panel</title>
+    <link rel="stylesheet" href="panel.css" />
   </head>
   <body>
     <div id="root"></div>
